# first-ml

./: pyproject.toml
data/: generate_data.py  insurance.csv
source/: app.py
